# ask-my-health

./: .gitignore  README.md  app.py  pyproject.toml  test_hf.py
blog/: 01-making-health-data-searchable.md  02-dev-blueprint-text-to-sql-duckdb-guardrails.md
healthllm/: __init__.py  __main__.py  db.py  dummy_data.py  ingest_steps.py  qa.py  sql_guard.py  sqlgen_hf.py  sqlgen_templates.py
notebooks/: README.md  hf_debug.ipynb
tests/: test_dummy_data.py  test_ingest_steps.py  test_sql_guard.py  test_sql_templates.py
